menudir = join_paths(get_option('datadir'), 'applications')
install_data(
  'com.github.JannikHv.Gydl.desktop',
  install_dir: menudir
)

metadir = join_paths(get_option('datadir'), 'metainfo')
install_data(
  'com.github.JannikHv.Gydl.appdata.xml',
  install_dir: metadir
)

icondir = join_paths(get_option('datadir'), 'icons/hicolor')
install_data(
  'gydl.svg',
  install_dir: join_paths(icondir, 'scalable/apps')
)
